grammar.js
  word: ($) => $.word,

  rules: {
    program: ($) => optional($._statements),

    _statements: ($) => seq(repeat(seq($._statement, $._terminator)), $._statement, optional($._terminator)),

    _terminated_statements: ($) => repeat1(seq($._statement, $._terminator)),

    // A newline is significant only where it can end a statement; elsewhere it is whitespace.
    _terminator: ($) => choice(';', '&', $._newline),

    _statement: ($) =>
      choice($._command_statement, $.pipeline, $.list, $.negated_command, $.timed_command, $.coproc_command),

    _command_statement: ($) =>
      choice($.command, $.declaration_command, $.redirected_statement, $._compound_command, $.function_definition),

    _compound_command: ($) =>
      choice(
        $.compound_statement,
        $.subshell,
        $.arithmetic_command,
        $.test_command,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.c_style_for_statement,
        $.case_statement
      ),

    list: ($) =>
      prec.left(
        1,
        seq(field('left', $._statement), field('operator', choice('&&', '||')), field('right', $._statement))
      ),

    pipeline: ($) => prec.left(3, seq($._pipeline_element, repeat1(seq(choice('|', '|&'), $._pipeline_element)))),

    _pipeline_element: ($) => choice($._command_statement, $.coproc_command),

    negated_command: ($) => prec.right(2, seq('!', choice($._command_statement, $.pipeline, $.timed_command))),

    timed_command: ($) =>
      prec.right(
        2,
        seq(
          alias(token(/t(?:\\\n)*i(?:\\\n)*m(?:\\\n)*e/), 'time'),
          optional(field('option', alias(token(/-(?:\\\n)*p/), $.word))),
          optional(alias(token(/-(?:\\\n)*-/), $.word)),
          optional(choice($._command_statement, $.pipeline, $.negated_command))
        )
      ),

    coproc_command: ($) =>
      prec.right(
        seq(
          'coproc',
          choice(
            $.command,
            // Like bash (`coproc [NAME] command [redirections]`), a compound body takes redirections.
            seq(optional(field('name', $.word)), $._compound_command, repeat(field('redirect', $._redirect)))
          )
        )
      ),

    command: ($) =>
      prec.left(
        choice(
          seq(
            repeat($._command_prefix),
            field('name', $.command_name),
            repeat(
              seq(
                optional($._backtick_comment_boundary),
                choice(field('argument', $._argument), field('redirect', $._redirect))
              )
            )
          ),
          repeat1($._command_prefix)
        )
      ),

    _command_prefix: ($) => choice(field('assignment', $.variable_assignment), field('redirect', $._redirect)),

    command_name: ($) => seq(optional($._backtick_comment_boundary), $._word),

    declaration_command: ($) =>
      prec.left(
        seq(
          repeat($._command_prefix),
          field('name', alias(choice('declare', 'typeset', 'export', 'readonly', 'local'), $.command_name)),
          repeat(
            seq(
              optional($._backtick_comment_boundary),
              choice(field('argument', choice($.variable_assignment, $._argument)), field('redirect', $._redirect))
            )
          )
        )
      ),

    variable_assignment: ($) =>
      seq(
        field('name', choice($.variable_name, $.subscript)),
        field('operator', token.immediate(choice('=', '+='))),
        field('value', choice($._argument, $._hash_value, $.array, $._empty_value))
      ),

    // A value is not at the start of a word, so a leading `#` is literal (`color=#fff`).
    _hash_value: ($) => choice(alias($._hash_word, $.word), alias($._hash_concatenation, $.concatenation)),

    subscript: ($) =>
      seq(field('name', $.variable_name), token.immediate('['), field('index', $._subscript_index), ']'),

    // Like bash, the index extends to the matching `]`, so it may hold bracketed groups at any depth
    // (`A[x[1[2]]]`), blanks, and newlines.
    _subscript_index: ($) =>
      repeat1(
        choice(
          alias(token.immediate(prec(1, SUBSCRIPT_TEXT)), $.word),
          alias(token(prec(1, SUBSCRIPT_TEXT)), $.word),
          alias($._angle_text, $.word),
          $._quoted_or_expansion,
          $._subscript_group
        )
      ),

    array: ($) => seq(token.immediate('('), repeat($._argument), ')'),

    _redirect: ($) => choice($.file_redirect, $.heredoc_redirect, $.herestring_redirect),

    file_redirect: ($) =>
      seq(
        optional(field('descriptor', $.file_descriptor)),
        choice(
          seq(
            field('operator', choice('<', '>', '>>', '>|', '<>', '&>', '&>>', '<&', '>&')),
            field('destination', $._argument)
          ),
          field('operator', choice('<&-', '>&-'))
        )
      ),

    herestring_redirect: ($) =>
      seq(optional(field('descriptor', $.file_descriptor)), field('operator', '<<<'), field('value', $._argument)),

    compound_statement: ($) => seq('{', optional($._terminated_statements), '}'),

    subshell: ($) => seq('(', optional($._statements), ')'),

    test_command: ($) => seq('[[', $._test_expression, ']]'),

    _test_expression: ($) =>
      choice(
        $._word,
        $.unary_test,
        $.binary_test,
        $.regex_test,
        alias($._test_negation, $.negated_test),
        alias($._test_logical, $.logical_test),
        alias($._test_parenthesized, $.parenthesized_test)
      ),

    regex_test: ($) =>
      prec(
        PREC.COMPARE,
        seq(
          field('left', $._word),
          field('operator', '=~'),
          $._regex_start,
          field('right', choice($._regex_part, alias($._regex_concatenation, $.concatenation)))
        )
      ),

    _regex_concatenation: ($) => prec.right(seq($._regex_part, repeat1(seq($._regex_concat, $._regex_part)))),

    _regex_part: ($) => choice($.regex, $._quoted_or_expansion),

    if_statement: ($) =>
      seq(
        'if',
        field('condition', $._terminated_statements),
        'then',
        optional(field('consequence', $._terminated_statements)),
        repeat($.elif_clause),
        optional($.else_clause),
        'fi'
      ),

    else_clause: ($) => seq('else', optional($._terminated_statements)),

    do_group: ($) => seq(optional($._backtick_comment_boundary), 'do', optional($._terminated_statements), 'done'),

    for_statement: ($) =>
      seq(
        field('keyword', choice('for', 'select')),
        field('variable', alias($.word, $.variable_name)),
        // Without a word list the separator is optional (`for i do …`); a newline may precede `in`.
        choice(
          seq(
            optional($._newline),
            optional($._backtick_comment_boundary),
            'in',
            repeat(seq(optional($._backtick_comment_boundary), field('value', $._argument))),
            optional($._backtick_comment_boundary),
            $._terminator
          ),
          optional($._terminator)
        ),
        field('body', choice($.do_group, $.compound_statement))
      ),

    case_statement: ($) =>
      seq(
        'case',
        field('value', $._argument),
        optional($._backtick_comment_boundary),
        'in',
        repeat($.case_item),
        optional(alias($._last_case_item, $.case_item)),
        'esac'
      ),

    case_item: ($) => seq($._case_patterns, optional($._statements), field('terminator', choice(';;', ';&', ';;&'))),

    // Only the last item may omit its terminator, but its statements still end before `esac`, which is
    // otherwise an argument (`a) echo esac`).
    _last_case_item: ($) => seq($._case_patterns, optional($._terminated_statements)),

    _case_patterns: ($) =>
      seq(
        optional($._backtick_comment_boundary),
        optional('('),
        field('pattern', $._argument),
        repeat(seq('|', field('pattern', $._argument))),
        ')'
      ),

    function_definition: ($) =>
      seq(
        choice(seq('function', field('name', $.word), optional(seq('(', ')'))), seq(field('name', $.word), '(', ')')),
        optional($._backtick_comment_boundary),
        field('body', $._compound_command)
      ),

    _word: ($) => choice($._word_part, $.concatenation),

    // Outside command position a leading `!(` is a negated extglob group rather than `!` negating a
    // subshell.
    _argument: ($) =>
      choice(
        $._word,
        alias($._negated_extglob_word, $.word),
        alias($._negated_extglob_pattern, $.extglob_pattern),
        alias($._negated_extglob_concatenation, $.concatenation)
      ),

    // A word led by a negated group (`!($x)b`, `!(a)$x`).
    concatenation: ($) =>
      prec.right(
        seq(
          $._word_part,
          repeat1(
            seq(
              $._concat,
              choice($._word_part, alias($._hash_word, $.word), alias($._negated_extglob_pattern, $.extglob_pattern))
            )
          )
        )
      ),

    _word_part: ($) =>
      choice(
        $.word,
        // Literal text that the scanner ends before a structured extglob group (`foo@($x)`).
        alias($._extglob_prefix, $.word),
        $.extglob_pattern,
        $.string,
        $.raw_string,
        $.ansi_c_string,
        $.translated_string,
        $.simple_expansion,
        $.expansion,
        $.command_substitution,
        $.arithmetic_expansion,
        $.process_substitution,
        alias($._bare_dollar, $.word)
      ),

    // An extglob group (`@(a|b)`) is part of the word; `!(` only inside a word, since a leading `!`
    // before `(` negates a subshell.
    word: () =>
      token(
        seq(
          choice(noneOf('#', ...WORD_BREAKS), /\\[^\n]/, EXTGLOB_GROUP),
          repeat(choice(noneOf(...WORD_BREAKS), /\\[^\n]/, EXTGLOB_GROUP, EXTGLOB_NEGATION))
        )
      ),

    // A `#` inside a word (`a$b#c`) is literal; only a `#` that begins a word starts a comment.
    // A group whose alternatives hold expansions (`@($(cmd)|b)`); a literal group stays inside a
    // `word`, whose token is longer than the group's opening token.
    extglob_pattern: ($) =>
      seq(
        field('operator', choice('?(', '*(', '+(', '@(')),
        optional($._extglob_alternative),
        repeat(seq('|', optional($._extglob_alternative))),
        ')'
      ),

    _negated_extglob_pattern: ($) =>
      seq(
        field('operator', '!('),
        optional($._extglob_alternative),
        repeat(seq('|', optional($._extglob_alternative))),
        ')'
      ),

    // An alternative may hold unquoted blanks, so each of its words is an `alternative` field; like
    // an assignment value, a word there may start with `#` (`@($x #b)`).
    _extglob_alternative: ($) => repeat1(field('alternative', choice($._argument, $._hash_value))),

    _hash_word: () =>
      token(prec(1, seq('#', repeat(choice(noneOf(...WORD_BREAKS), /\\[^\n]/, EXTGLOB_GROUP, EXTGLOB_NEGATION))))),

    string: ($) =>
      seq(
        '"',
        repeat(
          choice($.string_content, $.simple_expansion, $.expansion, $.command_substitution, $.arithmetic_expansion)
        ),
        '"'
      ),

    // Where a heredoc inside `$( )` ends on a line that holds the `)`, bash reads the rest of that line
    // with its line continuations removed, even inside single quotes, and reads the bodies still queued
    // before that line right after it, even where it ends inside quotes; the scanner then splits the
    // quoted text around the continuations and the bodies.
    raw_string: ($) =>
      choice(
        /'[^']*'/,
        seq($._closer_line_raw_string_start, repeat(alias($._closer_line_raw_string_content, $.string_content)), "'")
      ),

    simple_expansion: ($) =>
      seq(
        '$',
        choice(
          alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.variable_name),
          alias(token.immediate(/[0-9*@#?$!_-]/), $.special_variable_name)
        )
      ),

    // `${#}` and `${!}` are the special parameters `#` and `!`; with a following name they are the
    // length and indirection prefixes.
    expansion: ($) =>
      seq(
        '${',
        choice(
          seq(
            optional(field('prefix', alias(token.immediate(choice('#', '!')), $.operator))),
            field(
              'parameter',
              choice(
                alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.variable_name),
                alias(token.immediate(/[0-9]+|[*@?$_-]/), $.special_variable_name),
                alias(token.immediate(choice('#', '!')), $.special_variable_name),
                alias($._expansion_subscript, $.subscript)
              )
            ),
            optional($._expansion_operation)
          ),
          field('parameter', alias(token.immediate(choice('#', '!')), $.special_variable_name)),
          // Bash rejects `${}` and a body without a parameter (`${=1}`, `${"x"}`) only when expanding. A
          // `$name` expansion is left out, since its `$` would tie with the special parameter in `${$}`.
          repeat(
            field(
              'argument',
              choice(
                alias($._expansion_text, $.word),
                alias($._blank_expansion_text, $.word),
                alias($._angle_text, $.word),
                $.string,
                $.raw_string,
                $.ansi_c_string,
                $.translated_string,
                $.command_substitution
              )
            )
          )
        ),
        '}'
      ),

    _expansion_subscript: ($) =>
      seq(
        field('name', alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.variable_name)),
        repeat1(seq(token.immediate('['), field('index', $._subscript_index), ']'))
      ),

    _expansion_operation: ($) =>
      choice(
        seq(
          field(
            'operator',
            alias(
              token.immediate(
                choice(
                  ':-',
                  '-',
                  ':=',
                  '=',
                  ':?',
                  '?',
                  ':+',
                  '+',
                  '#',
                  '##',
                  '%',
                  '%%',
                  '^',
                  '^^',
                  ',',
                  ',,',
                  '~',
                  '~~',
                  '/',
                  '//',
                  '/#',
                  '/%',
                  ':',
                  '@'
                )
              ),
              $.operator
            )
          ),
          repeat(
            field(
              'argument',
              choice(
                alias($._expansion_text, $.word),
                alias($._blank_expansion_text, $.word),
                alias($._angle_text, $.word),
                $._quoted_or_expansion,
                alias($._bare_dollar, $.word)
              )
            )
          )
        ),
        field('operator', alias(token.immediate(choice('*', '@')), $.operator)),
        // Text without an operator (`${x y}`) is rejected by bash only when expanding.
        repeat1(
          field(
            'argument',
            choice(
              alias($._expansion_text, $.word),
              alias($._blank_expansion_text, $.word),
              alias($._angle_text, $.word),
              $._quoted_or_expansion
            )
          )
        )
      ),

    _blank_expansion_text: () => token(prec(1, seq(/[ \t\n]/, repeat(choice(...expansionTextUnits()))))),

    // A `<` or `>` that the text above cannot end with, e.g. before `}`. A single character, so that a
    // run before `(` leaves its last `<`/`>` to open a process substitution (`${x:-a<<(b)}`).
    _angle_text: () => token(prec(-1, /[<>]/)),

    // The zero-width substitution markers let the scanner track nesting, since a heredoc opened
    // inside a substitution has its body read before the substitution ends.
