test/corpus/commands.txt
================================================================================
Simple commands
================================================================================

whoami
echo a b c

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word)))
  (command
    name: (command_name
      (word))
    argument: (word)
    argument: (word)
    argument: (word)))

================================================================================
Commands with environment assignments
================================================================================

A=1 B="two" env
C= cmd arg

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (word))
    assignment: (variable_assignment
      name: (variable_name)
      value: (string
        (string_content)))
    name: (command_name
      (word)))
  (command
    assignment: (variable_assignment
      name: (variable_name))
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Assignment-only commands
================================================================================

a=1
b+=2 c=
d=(x "y" $z)
e[1]=x

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (word)))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (word))
    assignment: (variable_assignment
      name: (variable_name)))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (array
        (word)
        (string
          (string_content))
        (simple_expansion
          (variable_name)))))
  (command
    assignment: (variable_assignment
      name: (subscript
        name: (variable_name)
        index: (word))
      value: (word))))

================================================================================
Declaration commands
================================================================================

export A=1 B
local -r c=$(d)
readonly E
declare -a f=(1 2)

--------------------------------------------------------------------------------

(program
  (declaration_command
    name: (command_name)
    argument: (variable_assignment
      name: (variable_name)
      value: (word))
    argument: (word))
  (declaration_command
    name: (command_name)
    argument: (word)
    argument: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))))))
  (declaration_command
    name: (command_name)
    argument: (word))
  (declaration_command
    name: (command_name)
    argument: (word)
    argument: (variable_assignment
      name: (variable_name)
      value: (array
        (word)
        (word)))))

================================================================================
Redirections anywhere in a command
================================================================================

npm > out run x 2>&1
< in cat
cmd &> all 3<> rw 4>&- >| clobber

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (file_redirect
      destination: (word))
    argument: (word)
    argument: (word)
    redirect: (file_redirect
      descriptor: (file_descriptor)
      destination: (word)))
  (command
    redirect: (file_redirect
      destination: (word))
    name: (command_name
      (word)))
  (command
    name: (command_name
      (word))
    redirect: (file_redirect
      destination: (word))
    redirect: (file_redirect
      descriptor: (file_descriptor)
      destination: (word))
    redirect: (file_redirect
      descriptor: (file_descriptor))
    redirect: (file_redirect
      destination: (word))))

================================================================================
Here-strings
================================================================================

cat <<< word
cat 0<<<"$x" arg

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    redirect: (herestring_redirect
      value: (word)))
  (command
    name: (command_name
      (word))
    redirect: (herestring_redirect
      descriptor: (file_descriptor)
      value: (string
        (simple_expansion
          (variable_name))))
    argument: (word)))

================================================================================
Pipelines
================================================================================

a | b |& c
a |
  b

--------------------------------------------------------------------------------

(program
  (pipeline
    (command
      name: (command_name
        (word)))
    (command
      name: (command_name
        (word)))
    (command
      name: (command_name
        (word))))
  (pipeline
    (command
      name: (command_name
        (word)))
    (command
      name: (command_name
        (word)))))

================================================================================
Lists
================================================================================

a && b || c
a &&
  b
a & b; c

--------------------------------------------------------------------------------

(program
  (list
    left: (list
      left: (command
        name: (command_name
          (word)))
      right: (command
        name: (command_name
          (word))))
    right: (command
      name: (command_name
        (word))))
  (list
    left: (command
      name: (command_name
        (word)))
    right: (command
      name: (command_name
        (word))))
  (command
    name: (command_name
      (word)))
  (command
    name: (command_name
      (word)))
  (command
    name: (command_name
      (word))))

================================================================================
Negated and timed pipelines
================================================================================

! a | b && c
time -p a | b

--------------------------------------------------------------------------------

(program
  (list
    left: (negated_command
      (pipeline
        (command
          name: (command_name
            (word)))
        (command
          name: (command_name
            (word)))))
    right: (command
      name: (command_name
        (word))))
  (timed_command
    option: (word)
    (pipeline
      (command
        name: (command_name
          (word)))
      (command
        name: (command_name
          (word))))))

================================================================================
Coprocesses
================================================================================

coproc cmd arg
coproc name { a; }

--------------------------------------------------------------------------------

(program
  (coproc_command
    (command
      name: (command_name
        (word))
      argument: (word)))
  (coproc_command
    name: (word)
    (compound_statement
      (command
        name: (command_name
          (word))))))

================================================================================
Command and process substitutions
================================================================================

echo $(a b) `c d` <(e) >(f)
echo $(
  a
)
echo ${ a; } ${| b; }

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word)))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word)))
    argument: (process_substitution
      (command
        name: (command_name
          (word))))
    argument: (process_substitution
      (command
        name: (command_name
          (word)))))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word)))))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))))
    argument: (command_substitution
      (command
        name: (command_name
          (word))))))

================================================================================
Comments
================================================================================

#!/bin/sh
# comment
echo a#b # trailing

--------------------------------------------------------------------------------

(program
  (comment)
  (comment)
  (command
    name: (command_name
      (word))
    argument: (word))
  (comment))

================================================================================
Line continuations
================================================================================

echo a \
  b

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (word)
    argument: (word)))

================================================================================
Line continuations after a word
================================================================================

a --flag\
	|| b
c "x"\
  > out
d\
e

--------------------------------------------------------------------------------

(program
  (list
    left: (command
      name: (command_name
        (word))
      argument: (word))
    right: (command
      name: (command_name
        (word))))
  (command
    name: (command_name
      (word))
    argument: (string
      (string_content))
    redirect: (file_redirect
      destination: (word)))
  (command
    name: (command_name
      (concatenation
        (word)
        (word)))))

================================================================================
Line continuation before a blank line
================================================================================

f() {
  a --x\

}

--------------------------------------------------------------------------------

(program
  (function_definition
    name: (word)
    body: (compound_statement
      (command
        name: (command_name
          (word))
        argument: (word)))))

================================================================================
Assignment values starting with a hash
================================================================================

color=#fff
local c=#1 d=x
y=#${z}w
q= #comment

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (word)))
  (declaration_command
    name: (command_name)
    argument: (variable_assignment
      name: (variable_name)
      value: (word))
    argument: (variable_assignment
      name: (variable_name)
      value: (word)))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (concatenation
        (word)
        (expansion
          parameter: (variable_name))
        (word))))
  (command
    assignment: (variable_assignment
      name: (variable_name)))
  (comment))

================================================================================
Empty assignment values before redirections
================================================================================

A=>f
B=<g cmd
export C=>h
x=<(echo hi)

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name))
    redirect: (file_redirect
      destination: (word)))
  (command
    assignment: (variable_assignment
      name: (variable_name))
    redirect: (file_redirect
      destination: (word))
    name: (command_name
      (word)))
  (declaration_command
    name: (command_name)
    argument: (variable_assignment
      name: (variable_name))
    redirect: (file_redirect
      destination: (word)))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (process_substitution
        (command
          name: (command_name
            (word))
          argument: (word))))))

================================================================================
Assignment values starting with a hash and an extglob group
================================================================================

A=#@(a|b) B=#!(a|b) C=#@($x|b) cmd
echo x #@($y) comment

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (word))
    assignment: (variable_assignment
      name: (variable_name)
      value: (word))
    assignment: (variable_assignment
      name: (variable_name)
      value: (concatenation
        (word)
        (extglob_pattern
          alternative: (simple_expansion
            (variable_name))
          alternative: (word))))
    name: (command_name
      (word)))
  (command
    name: (command_name
      (word))
    argument: (word))
  (comment))

================================================================================
Line continuations after a word before closers and redirections
================================================================================

a=$(foo\
)
echo `foo\
` <(bar\
)
echo foo\
 2>&1

--------------------------------------------------------------------------------

(program
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))))))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))))
    argument: (process_substitution
      (command
        name: (command_name
          (word)))))
  (command
    name: (command_name
      (word))
    argument: (word)
    redirect: (file_redirect
      descriptor: (file_descriptor)
      destination: (word))))

================================================================================
Line continuations after blanks and before other continuations
================================================================================

echo x; \
echo foo\
\

echo foo \
 \
  2>&1

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (word)
    redirect: (file_redirect
      descriptor: (file_descriptor)
      destination: (word))))

================================================================================
Backslash at the end of input
================================================================================

echo a\
--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Empty function substitutions
================================================================================

echo blank --${ 
}--
echo blank --${  }--

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (word)
    argument: (concatenation
      (word)
      (command_substitution)
      (word)))
  (command
    name: (command_name
      (word))
    argument: (word)
    argument: (concatenation
      (word)
      (command_substitution)
      (word))))

================================================================================
Coprocesses with redirections
================================================================================

coproc { echo hi; } > /dev/null
coproc name { echo hi; } 2>&1

--------------------------------------------------------------------------------

(program
  (coproc_command
    (compound_statement
      (command
        name: (command_name
          (word))
        argument: (word)))
    redirect: (file_redirect
      destination: (word)))
  (coproc_command
    name: (word)
    (compound_statement
      (command
        name: (command_name
          (word))
        argument: (word)))
    redirect: (file_redirect
      descriptor: (file_descriptor)
      destination: (word))))

================================================================================
Line continuations after a blank separate words
================================================================================

echo a \
b
echo 'a' \
"b" \
$x
echo \
b
echo a \
\
b

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (word)
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (raw_string)
    argument: (string
      (string_content))
    argument: (simple_expansion
      (variable_name)))
  (command
    name: (command_name
      (word))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (word)
    argument: (word)))

================================================================================
Backquotes end at a backquote inside single quotes
================================================================================

echo "`: '`"; echo a; echo "`'`"
x=`: '`; echo b
echo `echo 'a\`b'` 'c`d'

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (string
      (command_substitution
        (command
          name: (command_name
            (word))))))
  (command
    name: (command_name
      (word))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (string
      (command_substitution)))
  (command
    assignment: (variable_assignment
      name: (variable_name)
      value: (command_substitution
        (command
          name: (command_name
            (word))))))
  (command
    name: (command_name
      (word))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (raw_string)))
    argument: (raw_string)))

================================================================================
Backslashes in single quotes inside backquotes
================================================================================

echo `echo '\' foo`
echo `echo 'C:\' bar`
echo `echo '\\' baz`
echo `echo 'a\`b' qux`

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (raw_string)
        argument: (word))))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (raw_string)
        argument: (word))))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (raw_string)
        argument: (word))))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (raw_string)
        argument: (word)))))

================================================================================
Consecutive line continuations inside a word
================================================================================

echo a\
\
b
echo a \
\
b
echo a\
\
$x

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (concatenation
      (word)
      (word)))
  (command
    name: (command_name
      (word))
    argument: (word)
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (concatenation
      (word)
      (simple_expansion
        (variable_name)))))

================================================================================
Comments end at closing backquotes
================================================================================

echo `echo hey # comment` there
printf '%s\n' "`printf inside # comment`outside"
printf 'hey %s' `# comment` | cat <<< 'there'
echo next

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word))
      (comment))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (raw_string)
    argument: (string
      (command_substitution
        (command
          name: (command_name
            (word))
          argument: (word))
        (comment))
      (string_content)))
  (pipeline
    (command
      name: (command_name
        (word))
      argument: (raw_string)
      argument: (command_substitution
        (comment)))
    (command
      name: (command_name
        (word))
      redirect: (herestring_redirect
        value: (raw_string))))
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Escapes and line endings inside backquote comments
================================================================================

echo `echo inside # escaped \` remains` outside
echo `echo inside # slash\\` outside
echo `echo one # joined \
kept` outside
echo `echo before # comment
echo after`

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word))
      (comment))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word))
      (comment))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word))
      (comment))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word))
      (comment)
      (command
        name: (command_name
          (word))
        argument: (word)))))

================================================================================
Hash words and comments across substitution contexts
================================================================================

echo `echo inside#literal` outside
echo `echo '#quoted' "#double"` outside
echo $(echo inside # closing backtick ` literal
) outside
# outside ` literal
echo next

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word)))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (raw_string)
        argument: (string
          (string_content))))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (word))
      (comment))
    argument: (word))
  (comment)
  (command
    name: (command_name
      (word))
    argument: (word)))

================================================================================
Parameter expansions inside backquotes keep hash operators
================================================================================

echo `echo $# ${#x} ${x#pat} ${x##pat} ${choice##* }` outside
echo `echo ${x:- # literal} ${x:+#literal} ${#args[@]}` outside
echo `local result=${x#pat}; echo $result # comment` outside

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (simple_expansion
          (special_variable_name))
        argument: (expansion
          prefix: (operator)
          parameter: (variable_name))
        argument: (expansion
          parameter: (variable_name)
          operator: (operator)
          argument: (word))
        argument: (expansion
          parameter: (variable_name)
          operator: (operator)
          argument: (word))
        argument: (expansion
          parameter: (variable_name)
          operator: (operator)
          argument: (word))))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (command
        name: (command_name
          (word))
        argument: (expansion
          parameter: (variable_name)
          operator: (operator)
          argument: (word))
        argument: (expansion
          parameter: (variable_name)
          operator: (operator)
          argument: (word))
        argument: (expansion
          prefix: (operator)
          parameter: (subscript
            name: (variable_name)
            index: (word)))))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (declaration_command
        name: (command_name)
        argument: (variable_assignment
          name: (variable_name)
          value: (expansion
            parameter: (variable_name)
            operator: (operator)
            argument: (word))))
      (command
        name: (command_name
          (word))
        argument: (simple_expansion
          (variable_name)))
      (comment))
    argument: (word)))

================================================================================
Backquote comments in for and select word lists preserve continuations
================================================================================

echo `for x in a # joined \
kept
 do echo "$x"; done` outside
echo `select x in ${#items} ${items#pat} # joined \
kept
 do break; done` outside

--------------------------------------------------------------------------------

(program
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (for_statement
        variable: (variable_name)
        value: (word)
        (comment)
        body: (do_group
          (command
            name: (command_name
              (word))
            argument: (string
              (simple_expansion
                (variable_name)))))))
    argument: (word))
  (command
    name: (command_name
      (word))
    argument: (command_substitution
      (for_statement
        variable: (variable_name)
        value: (expansion
          prefix: (operator)
          parameter: (variable_name))
        value: (expansion
          parameter: (variable_name)
          operator: (operator)
          argument: (word))
        (comment)
        body: (do_group
          (command
            name: (command_name
              (word))))))
    argument: (word)))

================================================================================
Continued backquote comments in compound-command headers
================================================================================

echo `for x # joined \
kept
 in a; do echo "$x"; done` outside
echo `case a # joined \
kept
 in a) echo yes;; esac` outside
echo `case a in # joined \
kept
 a) echo yes;; esac` outside
set -- a
echo `for x; # joined \
kept
 do echo "$x"; done` outside
echo `f() # joined \
kept
 { echo yes; }; f` outside

--------------------------------------------------------------------------------
